<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".CalculatorActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sherwin's Calculator"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="RESULT"
        android:gravity="left"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="10dp"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="left"
        android:text=""
        android:textSize="35pt"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@id/buAC"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/ac"
                android:textSize="20sp" />

            <Button
                android:id="@id/buplusminus"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/plusminus"
                android:textSize="20sp" />

            <Button
                android:id="@id/buconversion"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/conversion"
                android:textSize="20sp" />

            <Button
                android:id="@id/budivide"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/division"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@id/buseven"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/seven"
                android:textSize="20sp" />

            <Button
                android:id="@id/bueight"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/eight"
                android:textSize="20sp" />

            <Button
                android:id="@id/bunine"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/nine"
                android:textSize="20sp" />

            <Button
                android:id="@id/bumultiplication"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/multiplication"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@id/bufour"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/four"
                android:textSize="20sp" />

            <Button
                android:id="@id/bufive"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/five"
                android:textSize="20sp"/>

            <Button
                android:id="@id/busix"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/six"
                android:textSize="20sp"
                />

            <Button
                android:id="@id/busubtraction"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/subtraction"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@id/buone"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/one"
                android:textSize="20sp" />

            <Button
                android:id="@id/butwo"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/two"
                android:textSize="20sp"/>

            <Button
                android:id="@id/buthree"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/three"
                android:textSize="20sp" />

            <Button
                android:id="@id/buaddition"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/addition"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <Button
                android:id="@id/buzero"
                android:layout_width="100pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/zero"
                android:textSize="20sp"/>

            <Button
                android:id="@id/budecimal"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/decimal"
                android:textSize="20sp"/>

            <Button
                android:id="@id/buequals"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/equals"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>



</LinearLayout>